K8s/Deployment_Frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: devopsapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: myacr69984123.azurecr.io/frontend:a84b0ba07327b254da5dd0a23adf48d4a2ba96f3
          ports:
            - containerPort: 80
