K8s/Service_Backend.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: devopsapp
spec:
  selector:
    app: backend
  ports:
    - port: 5000
      targetPort: 5000
  type: ClusterIP
