K8s/Service_Frontend.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: devopsapp
spec:
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
