K8s/Ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: devopsapp
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      # Backend API
      - path: /api/hello
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 5000

      # Frontend (all other paths)
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
